--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!--  -->
+    <include src="./partials/sign-up-form.html"></include>
+    <include src="./partials/sign-in-form.html"></include>
   </body>
 </html>
