add main file in project

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <!--  -->
+    <include src="./partials/header.html"></include>
+    <!--  -->
     <include src="./partials/sign-up-form.html"></include>
     <include src="./partials/sign-in-form.html"></include>
   </body>
