--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!--  -->
-    <include src="./partials/header.html"></include>
+    <include src="./partials/common/header.html"></include>
     <!--  -->
-    <include src="./partials/sign-up-form.html"></include>
-    <include src="./partials/sign-in-form.html"></include>
-  </body>
+    <include src="./partials/common/sign-in-form.html"></include>
+    <include src="./partials/common/sign-up-form.html"></include>
+
+
+
+    <script type="module" src="./index.js"></script>
+  </body> 
 </html>
