--- a/src/ShoppingPage.html
+++ b/src/ShoppingPage.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
     <title>Document</title>
 </head>
 <body>
     <!--  -->
-    <include src="./partials/header.html"></include>
-<!--  -->
+    <include src="./partials/common/header.html"></include>
+    <!--  -->
     <include src="./partials/ShoopingPage/shoppingList.html"></include>
-<!--  -->
-    <include src="./partials/supportUkraine.html"></include>
+    <!--  -->
+    <include src="./partials/common/supportUkraine.html"></include>
+
+
+
+
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
