--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Page title</title>
+    <link rel="stylesheet" href="./sass/index.scss" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Page title</title>
-	<link rel="stylesheet" href="./sass/index.scss" />
-</head>
+  <body>
+    <!--  -->
+    <include src="./partials/common/header.html"></include>
 
-<body>
-	<!--  -->
-	<include src="./partials/common/header.html"></include>
-	<!--  -->
-	<include src="./partials/common/authorization.html"></include>
+    <main>
+      <div class="main container">
+        <aside class="aside">
+          <section class="section-categories">
+            <ul class="list-categories"></ul>
+          </section>
+          <section class="section-support"></section>
+        </aside>
+        <section class="section-books-cards">
+          <h1 class="books-cards__title"></h1>
+          <ul class="books-cards__list"></ul>
+        </section>
+      </div>
+    </main>
 
+    <!--  -->
+    <include src="./partials/common/authorization.html"></include>
 
-
-	<script type="module" src="./index.js"></script>
-</body>
-
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
