--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
       </div>
     </main>
 
+    <div class="book-backdrop is-hidden">
+      <include src="./partials/HomePage/popUp.html"></include>
+    </div>
+
     <!--  -->
     <include src="./partials/common/authorization.html"></include>
 
