--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,8 @@
 
     <!--  -->
     <include src="./partials/common/authorization.html"></include>
+    <include src="./partials/HomePage/scroll.html"></include>      
+    
 
     <script type="module" src="./index.js"></script>
   </body>
