--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <!--  -->
     <include src="./partials/common/header.html"></include>
 
+ <a class="page-nav__link" href="./ShoppingPage.html"></a>
     <main>
       <div class="main container">
         <aside class="aside">
