--- a/src/index.html
+++ b/src/index.html
@@ -163,16 +163,32 @@
                     </aside>
                     <section class="section-books-cards">
             <h1 class="books-cards__title"></h1>
-            <ul class="books-cards__list"></ul>
+            <ul class="books-cards__list">
+              <!-- <div class="loader"></div> -->
+            </ul>
                         </section>
            
           </div>
       </div>
     </main>
 
+    <!-- <div class="bookshelf_wrapper">
+      <ul class="books_list">
+        <li class="book_item first"></li>
+        <li class="book_item second"></li>
+        <li class="book_item third"></li>
+        <li class="book_item fourth"></li>
+        <li class="book_item fifth"></li>
+        <li class="book_item sixth"></li>
+      </ul>
+      <div class="shelf"></div>
+    </div> -->
+
     <div class="book-backdrop is-hidden">
       <include src="./partials/HomePage/popUp.html"></include>
     </div>
+
+    
 
     <!--  -->
     <include src="./partials/common/authorization.html"></include>
