--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,11 @@
       </div>
     </main>
 
+        <section class="categories-section categories-root">
+         
+        </section>
+
+
  <div class="backdrop-form backdrop-form--is-hidden" data-form-modal>
       <div class="modal-form">
         <include src="./partials/HomePage/popUp.html"></include>
