--- a/src/ShoppingPage.html
+++ b/src/ShoppingPage.html
@@ -14,7 +14,7 @@
     <include src="./partials/ShoopingPage/shoppingList.html"></include>
     <!--  -->
     <include src="./partials/common/supportUkraine.html"></include>
-
+    <script src="./js/header/currentLink.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
