--- a/src/ShoppingPage.html
+++ b/src/ShoppingPage.html
@@ -11,9 +11,15 @@
     <!--  -->
     <include src="./partials/common/header.html"></include>
     <!--  -->
-    <include src="./partials/ShoopingPage/shoppingList.html"></include>
-    <!--  -->
-    <include src="./partials/common/supportUkraine.html"></include>
+    <div class="container">
+      <div class="shopping-page-flex-thumb">
+        <div class="shoppin-list-hide-support">
+          <include src="./partials/common/supportUkraine.html"></include>
+        </div>
+        <!--  -->
+        <include src="./partials/ShoopingPage/shoppingList.html"></include>
+      </div>
+    </div>
 
     <script type="module" src="./index.js"></script>
   </body>
