--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <ul class="list-categories"></ul>
           </section>
           <section class="section-support">
-            <div class="support-menu"> 
+            <div class="support-menu">
               <div class="support-menu__title-thumb">
                 <h2 class="support-menu__tittle">Support Ukraine</h2>
                 <svg class="support-menu__icon-coat" width="20" height="32">
@@ -95,7 +95,7 @@
     </div>
   </main>
 
-  <div class="book-backdrop is-hidden" data-book-modal-open>
+  <div class="book-backdrop is-hidden-book-backdrop" data-book-modal-open>
     <include src="./partials/HomePage/popUp.html"></include>
   </div>
 
