--- a/src/ShoppingPage.html
+++ b/src/ShoppingPage.html
@@ -14,9 +14,8 @@
     <include src="./partials/ShoopingPage/shoppingList.html"></include>
     <!--  -->
     <include src="./partials/common/supportUkraine.html"></include>
-    <script src="./js/header/user.js"></script>
     <script src="./js/header/mobileMenu.js"></script>
     <script src="./js/header/currentLink.js"></script>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./ShoppingPage.js"></script>
   </body>
 </html>
