--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
     </div>
   </main>
 
-  <div class="book-backdrop is-hidden-book-backdrop" data-book-modal-open>
+  <!-- <div class="book-backdrop is-hidden-book-backdrop" data-book-modal-open>
     <include src="./partials/HomePage/popUp.html"></include>
-  </div>
+  </div> -->
 
   <!--  -->
   <include src="./partials/common/authorization.html"></include>
