--- a/src/ShoppingPage.html
+++ b/src/ShoppingPage.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="./sass/index.scss" />
-	<title>Document</title>
+	<link rel="icon" href="./images/favicon/favicon.ico" sizes="any" />
+	<title>Shopping Page</title>
 </head>
 
 <body>
